--- a/app.json
+++ b/app.json
@@ -2,21 +2,23 @@
   "expo": {
     "name": "Sage-Vote",
     "slug": "sage-vote",
-    "version": "1.0.1",
+    "scheme": "sage-vote",
+    "splash": {
+      "image": "./assets/images/logo.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#F5F9F2"
+    },
+    "icon": "./assets/images/icon.png",
+    "version": "1.0.0",
     "orientation": "portrait",
     "userInterfaceStyle": "automatic",
     "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.carolyn.dev.sagevote",
+      "buildNumber": "1",
+      "supportsTablet": false,
+      "bundleIdentifier": "com.carolyn.sagevote.app",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       }
-    },
-    "android": {
-      "adaptiveIcon": {
-        "backgroundColor": "#ffffff"
-      },
-      "package": "com.carolyn.dev.sagevote"
     },
     "plugins": [
       "expo-router",
