--- a/package.json
+++ b/package.json
@@ -2,6 +2,20 @@
   "name": "sage-vote",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "expo": {
+    "name": "Sage-Vote",
+    "slug": "sage-vote",
+    "scheme": "sage-vote",
+    "web": {
+      "bundler": "metro"
+    },
+    "plugins": [
+      "expo-router"
+    ],
+    "experiments": {
+      "typedRoutes": true
+    }
+  },
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -11,16 +25,23 @@
   },
   "dependencies": {
     "@expo/metro-config": "~0.19.0",
+    "@expo/ngrok": "^4.1.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-picker/picker": "2.9.0",
     "expo": "*",
+    "expo-constants": "~17.0.8",
     "expo-dev-client": "^5.0.15",
-    "expo-router": "^4.0.18",
+    "expo-image": "^2.0.7",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.19",
     "expo-splash-screen": "^0.29.22",
-    "firebase": "*",
+    "expo-status-bar": "~2.0.1",
+    "firebase": "^11.5.0",
     "react": "^18.3.1",
     "react-dom": "18.3.1",
     "react-native": "^0.76.7",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5"
