--- a/app.json
+++ b/app.json
@@ -15,6 +15,7 @@
     "ios": {
       "buildNumber": "1",
       "supportsTablet": false,
+      "googleServicesFile": "./GoogleService-Info.plist",
       "bundleIdentifier": "com.carolyn.sagevote.app",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
@@ -36,6 +37,13 @@
         "projectId": "1a7b9a3c-d661-425e-93a7-bb24c09688f0"
       }
     },
-    "owner": "carolyn.dev"
+    "owner": "carolyn.dev",
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/1a7b9a3c-d661-425e-93a7-bb24c09688f0"
+    },
+    "android": {}
   }
 }
