--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "expo-router": "~4.0.19",
     "expo-splash-screen": "^0.29.22",
     "expo-status-bar": "~2.0.1",
-    "firebase": "^11.5.0",
+    "expo-updates": "~0.27.4",
+    "firebase": "^11.6.0",
     "firebase-ios-sdk": "^5.7.1",
     "react": "^18.3.1",
     "react-dom": "18.3.1",
