--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@expo/metro-config": "~0.19.0",
     "@expo/ngrok": "^4.1.3",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-firebase/app": "^21.13.0",
+    "@react-native-firebase/firestore": "^21.13.0",
     "@react-native-picker/picker": "2.9.0",
     "expo": "*",
     "expo-constants": "~17.0.8",
@@ -46,7 +48,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "expo-build-properties": "~0.13.2"
   },
   "devDependencies": {
     "@babel/core": "*",
