--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@react-native-firebase/firestore": "^21.13.0",
     "@react-native-picker/picker": "2.9.0",
     "expo": "*",
+    "expo-build-properties": "~0.13.2",
     "expo-constants": "~17.0.8",
     "expo-dev-client": "^5.0.15",
     "expo-image": "^2.0.7",
@@ -48,8 +49,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-build-properties": "~0.13.2"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "*",
