--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "expo": "*",
     "expo-build-properties": "~0.13.2",
     "expo-constants": "~17.0.8",
-    "expo-dev-client": "^5.0.15",
+    "expo-dev-client": "~5.0.19",
     "expo-image": "^2.0.7",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.19",
