--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "expo-status-bar": "~2.0.1",
     "expo-updates": "~0.27.4",
     "firebase": "^11.6.0",
+    "firebase-admin": "^13.2.0",
     "firebase-ios-sdk": "^5.7.1",
     "react": "^18.3.1",
     "react-dom": "18.3.1",
